--- a/shopapp_angular/src/index.html
+++ b/shopapp_angular/src/index.html
@@ -8,6 +8,6 @@
   <!-- <link rel="icon" type="image/x-icon" href="favicon.ico"> -->
 </head>
 <body>
-  <app-order-confirm></app-order-confirm>
+  <app-home></app-home>
 </body>
 </html>
